modules/015-admission-policy-engine/charts/constraint-templates/templates/operation/disallowed-tags.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8disallowedtags
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: operation-policy
  annotations:
    metadata.gatekeeper.sh/title: "Disallow tags"
    metadata.gatekeeper.sh/version: 1.1.0
    description: >-
      Requires container images to have an image tag different from the ones in
      the specified list.

      https://kubernetes.io/docs/concepts/containers/images/#image-names
spec:
  crd:
    spec:
      names:
        kind: D8DisallowedTags
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            tags:
              type: array
              description: Disallowed container image tags.
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
            rego: |
              package d8.operation_policies

              import data.lib.common.input_containers

              violation contains {"msg": msg} if {
                not input.review.operation == "DELETE"
                container := input_containers[_]
                disallowed_tags := [tag | tag := input.parameters.tags[_]; endswith(container.image, concat(":", ["", tag]))]
                count(disallowed_tags) > 0
                msg := sprintf("container <%v> uses a disallowed tag <%v>; disallowed tags are %v", [container.name, container.image, input.parameters.tags])
              }

              violation contains {"msg": msg} if {
                not input.review.operation == "DELETE"
                container := input_containers[_]
                not contains(container.image, ":")
                msg := sprintf("container <%v> didn't specify an image tag <%v>", [container.name, container.image])
              }
