modules/015-admission-policy-engine/charts/constraint-templates/tests/disallowed-tags/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed
  namespace: default
spec:
  containers:
    - name: foo
      image: my.repo/app:v1
